Corrections to Updater, VersionChecker, and versionchecker.php